[build-system]
requires = [ 
    "setuptools>=61.0",
    "requests>=2.27.1",
    "robotframework>=5.0.1",
    "robotframework-seleniumlibrary>=6.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-beholderlibrary"
version = "0.0.1"
authors = [
  { name="Zero-Defect", email="centro.tecnologia@zero-defect.com.br" },
]
description = "A Robot Framework package to integrate with Beholder, the Zero-Defect's Visual Regression Testing platform."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library"
]

[project.urls]
"Homepage" = "https://github.com/zerodefect-testhouse/robotframework-BeholderLibrary"
"Bug Tracker" = "https://github.com/zerodefect-testhouse/robotframework-BeholderLibrary/issues"